--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/vite": "^4.0.0",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-emoji-picker": "^1.1.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
